# medic-ext-elixir

./: Brewfile  CHANGELOG.md  Cargo.toml  README.md
.config/: medic.toml
.github/workflows/: pipeline.yml  pkg.yml
.medic/: config.toml
medic-check-elixir/: Cargo.toml
medic-check-elixir/src/: lib.rs
medic-check-elixir/src/cli/: app.rs
medic-outdated-elixir/: Cargo.toml
medic-outdated-elixir/src/: lib.rs  main.rs
medic-outdated-elixir/src/outdated/: mod.rs
medic-step-elixir/: Cargo.toml
medic-step-elixir/src/: lib.rs
