[workspace]
members = [
    "medic-check-elixir",
    "medic-outdated-elixir",
    "medic-step-elixir",
]
resolver = "2"


[workspace.dependencies]
clap = { version = "4.1", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
clap_complete = "4.1.4"
indoc = "2.0.1"
medic-lib = "0.2"
regex = "1.10"


[workspace.package]
authors = ["Eric Saxby <sax@livinginthepast.org>", "synchonal.dev"]
description = "Development workflow automation/suggestion for Elixir projects"
edition = "2024"
homepage = "https://github.com/synchronal"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/synchronal/medic-ext-elixir"
version = "1.0.0"
